# omaro

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  justfile  release-plz.toml
.github/workflows/: audit.yml  check.yml  release-binaries.yml  release.yml  test.yml
assets/: demo.tape
configs/: default.toml  minimal.toml  minimaler.toml  minimalest.toml
src/: cli.rs  data.rs  main.rs  modes.rs  panic.rs  utils.rs
src/app/: action.rs  handle_cache.rs  handle_events.rs  handle_posts.rs  mod.rs  navigate.rs  run.rs
src/app/display/: mod.rs
src/app/display/components/: container.rs  details_popup.rs  header.rs  keybinds_popup.rs  mod.rs  posts.rs  scrollbar.rs
src/config/: mod.rs
src/config/components/: borders.rs  comment_count.rs  downloaded.rs  header.rs  keybind_hints.rs  mod.rs  mode_info.rs  score_count.rs  scrollbar.rs  shortcuts.rs  submitted_elapsed.rs  submitted_user.rs
src/database/: mod.rs
src/database/migrations/01-posts/: up.sql
src/database/queries/: delete_post.sql  insert_post.sql  mod.rs
