[package]
name = "omaro"
description = "TUI for lobste.rs. Browse posts and comments from the comfort of your terminal"
version = "0.1.4"
edition = "2024"
repository = "https://github.com/rolv-apneseth/omaro"
homepage = "https://github.com/rolv-apneseth/omaro"
authors = ["Rolv Apneseth <rolv.apneseth@gmail.com>"]
rust-version = "1.88"
license = "AGPL-3.0"
include = ["/src"]
keywords = ["lobsters", "TUI", "command-line", "ratatui"]
categories = ["command-line-utilities"]

[dependencies]
# Terminal
crossterm = "0.29" # Terminal backend
ratatui = { version = "0.29", features = ["serde"] } # TUI framework
clap = { version = "4.5.45", features = [
  "derive",
  "env",
] } # Parse CLI arguments
textwrap = "0.16" # Text wrapping, primarily in the details popup

# Fetch data
reqwest = { version = "0.12", default-features = false, features = [
  "default-tls",
  "blocking",
  "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4", features = [
  "serde",
] } # Parse, display and manipulate datetime values

color-eyre = { version = "0.6" } # Custom panics + errors
# Custom panics
anstyle = "1.0"
anstream = "0.6"
os_info = "3.12"
backtrace = "0.3"
uuid = { version = "1.17", features = ["v4"] }

# Database
rusqlite = { version = "0.37", features = [
  "bundled",
  "rusqlite-macros",
  "extra_check",
] }
rusqlite_migration = { version = "2.3", features = ["from-directory"] }
include_dir = "0.7.4"
r2d2_sqlite = { version = "0.31" }
r2d2 = { version = "0.8" }

dirs = "6.0"                                     # Get user-specific directory paths
toml = { version = "0.9", features = ["serde"] } # Parse configuration file
open = "5.3"                                     # Open links using the user's default browser

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
